# python_template_package

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg
src/mypackage/: __init__.py  first_module.py  second_module.py
src/mypackage.egg-info/: PKG-INFO  SOURCES.txt
src/mypackage/test/: __init__.py
