[metadata]
name = mypackage
version = 0.0.dev1
summary = My package description
author = Paul Amari
author_email = amari.paul@protonmail.com
description = A small tutorial package for learning
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = 
    tutorial
    training
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir=
    = src
packages = find:

[options.packages.find]
where = src